seedboxk8s/applications/traefik-10-config/Deployment.traefik-tailscale.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-tailscale
  namespace: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: traefik-tailscale
  template:
    metadata:
      labels:
        app.kubernetes.io/name: traefik-tailscale
    spec:
      serviceAccountName: traefik-account
      containers:
      - name: traefik-tailscale
        image: docker.io/library/traefik:v3.7.14@sha256:575fa15b135078fe5e50aa847987d96dbddd7b093c172429618404df73f3fa7c
        args:
          - --api.insecure=true
          - --api.dashboard=true
          - --log.level=DEBUG
          - --accesslog=true

          - --entrypoints.web.Address=:80
          - --entrypoints.web.forwardedHeaders.trustedIPs=127.0.0.1/32,10.0.0.0/8
          - --entrypoints.websecure.Address=:443
          - --entrypoints.websecure.forwardedHeaders.trustedIPs=127.0.0.1/32,10.0.0.0/8
          - --entrypoints.plex32400.address=:32400
          - --entrypoints.plex64800.address=:64800

          - --providers.kubernetescrd
          # Only watch for Ingresses with the ingress class "traefik-tailscale"
          - --providers.kubernetescrd.ingressclass=traefik-tailscale
          # Allow cross-namespace references
          - --providers.kubernetescrd.allowCrossNamespace=true
        ports:
          - name: web
            containerPort: 80
            protocol: TCP
          - name: websecure
            containerPort: 443
            protocol: TCP
          - name: plex32400
            containerPort: 32400
            protocol: TCP
          - name: plex64800
            containerPort: 64800
            protocol: TCP
