seedboxk8s/applications/traefik-10-config/Service.traefik-localnet-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-localnet-dashboard
  namespace: traefik
spec:
  selector:
    name: traefik-localnet
  ports:
  - name: dashboard
    protocol: TCP
    port: 80
    targetPort: 18080
