seedboxk8s/applications/traefik-10-config/Service.traefik-tailscale.yaml
apiVersion: v1
kind: Service
metadata:
  name: seedboxk8s-tailscale-proxy
  namespace: traefik
  annotations:
    tailscale.com/expose: "true"
spec:
  selector:
    app.kubernetes.io/name: traefik-tailscale

  ports:
  - name: web
    protocol: TCP
    port: 80
    targetPort: 80
  - name: websecure
    protocol: TCP
    port: 443
    targetPort: 443
  - name: plex32400
    protocol: TCP
    port: 32400
    targetPort: 32400
  - name: plex64800
    protocol: TCP
    port: 64800
    targetPort: 64800
