seedboxk8s/applications/traefik-10-config/IngressRoute.dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    # Dont' forget that there is nothing at the root of this service;
    # the dashboard is at /dashboard/
    # (and the trailing slash is important!)
    - match: Host(`traefik.${clusterTld}`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: younix-dot-us-wildcard-backing-secret
