seedboxk8s/applications/traefik-10-config/IngressRoute.traefik-localnet-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-localnet-dashboard
  namespace: traefik
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Traefik (Localnet)
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: traefik
    gethomepage.dev/href: https://traefik-localnet.${productionClusterFqdn}/dashboard/
spec:
  ingressClassName: traefik-tailscale
  entryPoints:
    - websecure
  routes:
    # Don't forget that there is nothing at the root of this service;
    # the dashboard is at /dashboard/
    # (and the trailing slash is important!)
    - match: Host(`traefik-localnet.${productionClusterFqdn}`)
      kind: Rule
      services:
        - name: traefik-localnet-dashboard
          kind: Service
          port: 80
      middlewares:
        - name: authelia
          namespace: authelia
  tls:
    secretName: seedbox-wildcard-backing-secret
