seedboxk8s/applications/traefik-10-config/IngressRoute.traefik-tailscale-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-tailscale-dashboard
  namespace: traefik
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Traefik (Tailscale)
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: traefik
    gethomepage.dev/href: https://traefik-tailscale.${productionClusterFqdn}/dashboard/
    gethomepage.dev/pod-selector: app.kubernetes.io/name=traefik-tailscale
spec:
  ingressClassName: traefik-tailscale
  entryPoints:
    - websecure
  routes:
    # Don't forget that there is nothing at the root of this service;
    # the dashboard is at /dashboard/
    # (and the trailing slash is important!)
    - match: Host(`traefik-tailscale.${productionClusterFqdn}`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: authelia
          namespace: authelia
  tls:
    secretName: seedbox-wildcard-backing-secret
